<resources>
    <string name="app_name">Fluffies</string>
    <string name="image">Image</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_sign_into_your_account">Please sign into your account!</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="name">Name</string>
    <string name="no_notifications_yet">No notifications, yet.</string>
    <string name="enter_name">Enter Name</string>
    <string name="you_don_t_have_any_notification_right">You don\'t have any notification right.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="please_fill_your_register_email_we_will_send_a_four_digit_code_on_there">Please fill your register Email, we will send a four digit code on there</string>
    <string name="submit">Submit</string>
    <string name="sign_i"><u>Sign In</u></string>
    <string name="sign_u">Sign Up</string>
    <string name="your_pet_detail">Your Pet Detail</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="calender">Calender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pet_detail">Pet Detail</string>
    <string name="rony"><u>Rony</u></string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="weight">Weight</string>
    <string name="_120_lbs">120 lbs</string>
    <string name="age">Age</string>
    <string name="_01_yr">01 Yr</string>
    <string name="breed">Breed</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="my_pet_profile">My Pets Profile</string>
    <string name="golden_retriever">Golden Retriever</string>
    <string name="dummY_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis felis porttitor, molestie nunc in, pretium </string>
    <string name="edit_pet_profile">Edit Pet Profile</string>
    <string name="your_pet_profile_nupdated_successfully">Your Pet Profile\nupdated Successfully!</string>
    <string name="your_appointment_updated_successfully">Your Appointment\nupdated Successfully!</string>

    <string name="view_all"><u>View All</u></string>
    <string name="feeding">Feeding</string>
    <string name="about_pet">About Pet</string>
    <string name="add_new">Add New</string>
    <string name="later">Later</string>
    <string name="pet_detail_added_successfully">Your pet detail added successfully!! \nDo you want to add another dog?</string>
    <string name="alert">Alert</string>
    <string name="permissionRequired">Permission Required</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="openSettings">Open Settings</string>
    <string name="my_pets_profile">My Pets Profile</string>
    <string name="about_us">About Us</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="logout">Logout</string>
    <string name="privacy_police">Privacy Policy</string>
    <string name="update">Update</string>
    <string name="add_remainder">Add Reminder</string>
    <string name="weight_chart">Weight Log</string>
    <string name="weight_chart1">Weight Chart</string>
    <string name="body_condition">Body Condition Score Chart</string>
    <string name="statistics">Statistics</string>
    <string name="add_weight">Add Weight</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="about_weight">About Weight</string>
    <string name="choose_your_dog">Choose your pet</string>
    <string name="remainder">Reminder</string>
    <string name="done">Done</string>
    <string name="category">Category</string>
    <string name="vaccine_date">Vaccine Date</string>
    <string name="selected_date">Selected Date</string>
    <string name="appointments">Appointments</string>
    <string name="no_appointment_yet">No Appointment Yet!!</string>
    <string name="tap_plus_button">Tap Plus + Button Add New Appointment</string>
    <string name="tap_plus_button1">press the + button to set a reminder</string>
    <string name="remainder_date">Reminder Date</string>
    <string name="best_pet_care_here">Best Pet Care Here!!</string>
    <string name="house_essential">House Essential</string>
    <string name="logout_desc">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="weight_of_dog">Weight of Dog</string>
    <string name="lbs">lbs</string>
    <string name="save">Save</string>
    <string name="remember">Remember me</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="session_expired">Session Expired</string>
    <string name="unable_to_connect_server">Unable to connect to server.</string>
    <string name="error_">Error</string>
    <string name="retry">Retry</string>

    //////////////////////////////////////////////////////////////////////////////////////
    <string name="no_internet">Please check your internet connection.</string>
    <string name="error_name">Please enter name</string>
    <string name="error_email">Please enter email</string>
    <string name="error_validemail">Please enter valid email</string>
    <string name="error_password">Please enter old password</string>
    <string name="error_password_length">Password length should be atleast 6 characters.</string>
    <string name="error_new_password">Please enter new password</string>
    <string name="error_cpassword">Please enter confirm password</string>
    <string name="error_password_not_matched">New password and confirm new password must be same.</string>
    <string name="cardname_missing_message">Please enter card name</string>
    <string name="cardnumber_missing_message">Please enter card number</string>
    <string name="invalid_card_message">Please enter valid card number</string>
    <string name="about">Please enter about your pet</string>
    <string name="error_breed">Please enter breed</string>
    <string name="error_weight">Please enter weight</string>
    <string name="error_date">Please enter date</string>
    <string name="error_time">Please enter time</string>
    <string name="error_age">Please enter age</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_weight">Weight <small>(in pounds)</small></string>
    <string name="enter_breed">Enter Breed</string>
    <string name="enter_description">Please enter description</string>
    <string name="add"><u>Add</u></string>
    <string name="nodatafound">No data found</string>
    <string name="delete">Delete</string>
    <string name="reminders">Reminders</string>
    <string name="notification_title">Puppy Pedia</string>
    <string name="notification_subtitle">You have a new Reminders</string>
    <string name="body_condition_chart">Body Condition Chart</string>
    <string name="add_health_problem">Add Health Concerns</string>
    <string name="health_problem">Health Concerns</string>
    <string name="v_n_cristhon">by Dr. Nico DVM</string>
    <string name="do_you_want_to_delete">Do you want to Delete</string>
    <string name="selectdog">Select Your Pet</string>
    <string name="healthDesription">Health Description</string>
    <string name="loreum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="addImages">Add Images</string>
    <string name="error_description">"Enter Description "</string>
    <string name="addfirstImage">Add First Image</string>
    <string name="addsecondImage">Add Second Image</string>
    <string name="picture">Album</string>
    <string name="lifeEvent">Life Events</string>
    <string name="add_life">Add Life Event</string>
    <string name="error_title">Enter Title First</string>
    <string name="select_any_image">upload any image</string>
    <string name="petType">Pet Type</string>
    <string name="selectType">Select pet type</string>
    <string name="addpet">Add Pet</string>
</resources>