<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginVM"
            type="com.puppypedia.ui.auth.login.LoginVM" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:orientation="vertical"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/llSignUp"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:contentDescription="@string/image"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:fontFamily="@font/courgette_regular"
                android:text="@string/welcome_back"
                android:textColor="@color/theme_Color"
                android:textSize="@dimen/_20sdp" />

            <TextView
                style="@style/WrapTextView"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/please_sign_into_your_account" />

            <TextView
                style="@style/WrapTextView"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/email"
                android:textSize="@dimen/_14sdp" />

            <EditText
                style="@style/MatchEditText"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/enter_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@{loginVM.email}" />

            <TextView
                style="@style/WrapTextView"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/password"
                android:textSize="@dimen/_14sdp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_edit_text">

                <EditText
                    android:id="@+id/edtPassword"
                    style="@style/MatchEditText"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/cbPassword"
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_password"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@{loginVM.password}" />

                <CheckBox
                    android:id="@+id/cbPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:button="@drawable/bg_password_show_hide" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/tvForgotPassword"
                    android:button="@drawable/bg_check_boxx"
                    android:fontFamily="@font/opensans_semibold"
                    android:paddingStart="@dimen/_3sdp"
                    android:text="@string/remember"
                    tools:ignore="RtlSymmetry"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_10sdp"/>

                <TextView
                    android:id="@+id/tvForgotPassword"
                    style="@style/WrapTextView"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:onClick="@{(view)-> loginVM.onClick(view,`btnForgot`)}"
                    android:text="@string/forgot_password"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_10sdp" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login"
                style="@style/ButtonMatch"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_sky_blue_10dp"
                android:contentDescription="@string/image"
                android:onClick="@{(view)-> loginVM.onClick(view,`btnSignIn`)}"
                android:text="@string/sign_in" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                style="@style/WrapTextView"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp5"
                android:text="@string/don_t_have_an_account"
                android:textSize="@dimen/_10sdp" />

            <TextView
                style="@style/WrapTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp5"
                android:layout_marginBottom="@dimen/dp5"
                android:onClick="@{(view)->loginVM.onClick(view,`SignUp`)}"
                android:text="@string/sign_up"
                android:textColor="@color/theme_Color"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>


    </RelativeLayout>

</layout>

