<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="forgotVM"
            type="com.puppypedia.ui.auth.forgotpassword.ForgotPasswordVM" />

    </data>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.forgotpassword.ForgotPasswordActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"  >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_80sdp"
                android:contentDescription="@string/image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/courgette_regular"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/theme_Color"
                />

            <TextView
                style="@style/WrapTextView"
                android:text="@string/please_fill_your_register_email_we_will_send_a_four_digit_code_on_there"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/grey"
                android:fontFamily="@font/opensans_semibold"
                />

            <TextView
                style="@style/WrapTextView"
                android:text="@string/email"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_14sdp"
                />

            <EditText
                style="@style/MatchEditText"
                android:background="@drawable/bg_edit_text"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/enter_email"
                android:paddingStart="@dimen/_10sdp"
                android:text="@{forgotVM.email}"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingEnd="@dimen/_10sdp"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login"
                style="@style/ButtonMatch"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/button_bg_10dp"
                android:contentDescription="@string/image"
                android:onClick="@{(view)-> forgotVM.onClick(view,`btnSubmit`)}"
                android:text="@string/submit" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>




</LinearLayout>
</layout>