<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".ui.fragments.statistics.StatisticsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/opensans_regular"
                android:rotation="270"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_light_grray_10dp"
            android:weightSum="3">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDay"
                style="@style/ButtonMatch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/day"
                android:textColor="@color/black" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMonth"
                style="@style/ButtonMatch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_sky_blue_10dp"
                android:text="@string/month" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnYear"
                style="@style/ButtonMatch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/year"
                android:textColor="@color/black" />
        </LinearLayout>
        <TextView
            android:id="@+id/tvHeading"
            style="@style/WrapTextView"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/about_weight"
            android:textColor="@color/theme_Color"
            android:textSize="@dimen/_15sdp" />
        <TextView
            android:id="@+id/tvDescription"
            style="@style/WrapTextView"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/dummY_text"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>