<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_half"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.ui.editprofile.EditProfileActivity">

    <include
        android:id="@+id/tb"
        layout="@layout/auth_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="vertical">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:scaleType="center"
                android:src="@drawable/img"
                app:riv_corner_radius="@dimen/_5sdp" />

            <TextView
                style="@style/WrapTextView"
                android:text="@string/name"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_14sdp"
                />

            <EditText
                style="@style/MatchEditText"
                android:background="@drawable/bg_edit_text"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/enter_name"
                android:paddingStart="@dimen/_10sdp"
                android:text="Rony"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingEnd="@dimen/_10sdp"/>

            <TextView
                style="@style/WrapTextView"
                android:text="@string/email"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"
                />

            <EditText
                style="@style/MatchEditText"
                android:background="@drawable/bg_edit_text"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/enter_email"
                android:paddingStart="@dimen/_10sdp"
                android:text="jhonson@gmail.com"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:paddingEnd="@dimen/_10sdp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEditProfile"
                style="@style/ButtonMatch"
                android:layout_marginTop="@dimen/_60sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/button_bg_10dp"
                android:contentDescription="@string/image"
                android:text="Update" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

        </LinearLayout>